--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="pt-br" xmlns="http://www.w3.org/1999/html">
+	<head>
+		<meta charset="UTF-8">
+		<title>O Aprendiz II</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<script>
+			public class Barralateral {
+				public static void main(String[] args) {
+				}
+			}
+		</script>
+		<p id="deni"></p>
+		<script>
+		document.getElementById("deni").innerHTML = "Olá Mundo JS";
+		</script>
+		<div id="horario"></div>
+		<script>
+			var currentTime = new Date();
+			var formattedTime = currentTime.getHours() + ":" + currentTime.getMinutes() + ":" + currentTime.getSeconds();
+			var currentTimeElement = document.getElementById("horario");
+			currentTimeElement.textContent = formattedTime;
+		</script>
+		<div class="inicio">
+		<header>
+			<h1 class="titulo-principal">Olá Mundo, esta é a mensagem inicial deste projeto<h1>
+		</header>
+		</div>
+		<img id="banner" src="Olamundo.jpg">
+		<div class="principal">
+			<h2 class="titulo-centralizado">Programa o Aprendiz II</h2>
+			
+			<p id="missao"><em>Nossa missão é: <strong>"Construir uma página com a mensagem olá mundo"</strong>.</em></p>
 
+			<img src="BB.jpg" class="imagemfinal">
+
+		</div>
+		<div class="barralateral">
+			<nav>
+				<ul id="item">
+					<li>GESIN PR</li>
+					<li>PROGRAMA APRENDIZ</li>
+					<li>APRENDIZES</li>
+				</ul>
+			</nav>
+		</div>
+		<script>
+			var itemList = document.getElementById('item');
+			var items = itemList.getElementsByTagName('li');
+
+			for (var i = 0; i < items.length; i++) {
+				items[i].addEventListener('click', function() {
+					this.style.backgroundColor = '#fff';
+				});
+			}
+		</script>
+	</body>
+</html>
