--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<h1 class="titulo-principal">Olá Mundo, esta é a mensagem inicial deste projeto<h1>
 		</header>
 		</div>
-		<img id="banner" src="Olamundo.jpg">
+		<img id="banner" src="../Olamundo.jpg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Programa o Aprendiz II</h2>
 			
