--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			
 			<p id="missao"><em>Nossa missão é: <strong>"Construir uma página com a mensagem olá mundo"</strong>.</em></p>
 
-			<img src="./principal/BB.jpg" class="imagemfinal">
+			<img src="./principal/imgbb.jpg" class="imagemfinal">
 
 		</div>
 		<div class="barralateral">
